--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
+    "@mui/x-charts": "^6.18.7",
+    "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-data-grid-generator": "^6.18.7",
+    "next": "^12.3.4",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "20.10.7",
