--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-data-grid-generator": "^6.18.7",
     "next": "^12.3.4",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
@@ -27,8 +28,11 @@
     "@types/node": "20.10.7",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-react": "^7.33.2",
     "typescript": "5.3.3"
   }
 }
