--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
 # misc
 .DS_Store
 *.pem
@@ -23,3 +30,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
