--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -25,6 +26,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "@types/node": "20.10.7",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
@@ -33,6 +35,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0",
     "typescript": "5.3.3"
   }
 }
